添加白名单页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -167,6 +167,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar_TranslucentBar_without_bg"/>
 
+        <activity
+            android:name=".function.trashignore.activity.TrashIgnoreActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar_TranslucentBar_without_bg"/>
+
         <!-- 守护进程 start -->
         <!-- 后台监测应用流量使用的服务 -->
         <receiver android:name=".function.daemon.DaemonReceiver"/>
