添加权限检测逻辑

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -267,16 +267,16 @@
 # dyload的资源不能混淆
 
 #ab test===BEGIN===========
--keep public class com.ace.network.abtest.TestInfo { *; }
--keep public class com.ace.network.abtest.TestUserModel  { *; }
--keep @com.ace.network.abtest.TestInfo public class * { *; }
--keep @com.ace.network.abtest.TestUserModel public class * { *; }
+-keep public class com.jb.filemanager.abtest.TestInfo { *; }
+-keep public class com.jb.filemanager.abtest.TestUserModel  { *; }
+-keep @com.jb.filemanager.abtest.TestInfo public class * { *; }
+-keep @com.jb.filemanager.abtest.TestUserModel public class * { *; }
 -keepclassmembernames class * {
-    @com.ace.network.abtest.TestInfo *;
-    @com.ace.network.abtest.TestUserModel *;
-    @com.ace.network.database.DatabaseVersion *;
+    @com.jb.filemanager.abtest.TestInfo *;
+    @com.jb.filemanager.abtest.TestUserModel *;
+    @com.jb.filemanager.database.DatabaseVersion *;
 }
--keep class com.ace.network.abtest.** { *; }
+-keep class com.jb.filemanager.abtest.** { *; }
 #ab test===END===========
 
 #推送SDK混淆配置===BEGIN===========
