--- a/app/build.gradle
+++ b/app/build.gradle
@@ -195,4 +195,6 @@ dependencies {
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     testCompile 'junit:junit:4.12'
+    compile files('libs/zip4j_1.3.2.jar')
+    compile files('libs/java-unrar-0.5.jar')
 }
