--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -219,6 +219,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar_TranslucentBar_without_bg" />
 
+        <activity android:name=".function.search.view.SearchActivity"
+                  android:screenOrientation="portrait"
+                  android:windowSoftInputMode="stateVisible"
+                  android:theme="@style/AppTheme.NoActionBar_TranslucentBar_with_transparent_bg"/>
+
         <activity
             android:name=".function.applock.activity.AppLockPreActivity"
             android:screenOrientation="portrait"
