change version to beta

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,7 +91,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 22
         versionCode 1
-        versionName "1.0.0"
+        versionName "1.0.0-beta"
         multiDexEnabled = true
         manifestPlaceholders = [COM_JB_FILEMANAGER_CHANNEL_VALUE: "200"]
     }
