子文件夹粘贴弹窗

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,9 +95,14 @@
             </intent-filter>
         </activity>
 
-        <!-- 重复文件对话框页 -->
+        <!-- 重复文件粘贴对话框页 -->
         <activity
-            android:name=".function.duplicate.DuplicateFilesActivity"
+            android:name=".function.paste.DuplicateFilePasteActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar_TranslucentBar_without_bg_no_anim"/>
+        <!-- 子文件夹粘贴对话框页 -->
+        <activity
+            android:name=".function.paste.SubFolderPasteActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar_TranslucentBar_without_bg_no_anim"/>
 
