add usb storage tip

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -245,6 +245,13 @@
             android:screenOrientation="portrait"
             android:taskAffinity=":PermissionAlarm"
             android:theme="@style/Pop.Activity.Theme"/>
+        <activity
+            android:name=".function.tip.view.StateTipDialog"
+            android:excludeFromRecents="true"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:taskAffinity=":StateTipDialog"
+            android:theme="@style/Pop.Activity.Theme"/>
 
         <!-- 守护进程 start -->
         <!-- 后台监测应用流量使用的服务 -->
