--- a/app/build.gradle
+++ b/app/build.gradle
@@ -181,7 +181,10 @@ dependencies {
     compile(name: 'CommerceAdSdk-trunk-GPMonitorAdvanced-Time30000-v3.0-isInner-true-r35450', ext: 'aar')
     compile(name: 'BuyChannelSdk-trunk-v1.4.2-r33143-AF-4.6', ext: 'aar')
     compile(name: 'ProcessDaemonSdk-trunk-v1.2.6-r17114', ext: 'aar')
+    compile(name: 'toollocker_sdk-1.0.6', ext: 'aar')
+
     // network lib
+    compile 'com.romainpiel.shimmer:library:1.4.0@aar'
     compile('com.mopub:mopub-sdk:4.11.0@aar') { transitive = true }
     compile files('libs/zip4j_1.3.2.jar')
     compile files('libs/java-unrar-0.5.jar')
