工具锁接入

--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -324,3 +324,8 @@
 -keep class com.mopub.common.util.* { *; }
 -keep class com.mopub.mobileads.* { *; }
 #Mopub广告混淆配置===END===========
+
+#工具锁toollocker 混淆配置 ===BEGIN===========
+-dontwarn com.go.gl.**
+-dontwarn com.makeramen.roundedimageview.*
+#工具锁toollocker 混淆配置 ===END===========
