--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,8 +90,8 @@ android {
         applicationId "com.jb.filemanager"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 1
-        versionName "1.0.0-beta"
+        versionCode 2
+        versionName "1.0.0"
         multiDexEnabled = true
         manifestPlaceholders = [COM_JB_FILEMANAGER_CHANNEL_VALUE: "200"]
     }
