--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
-apply plugin: 'android-apt'
-apply plugin: 'AndResGuard'
+
+//apply plugin: 'AndResGuard'
 
 def static dateTime() {
     return new Date().format("yyyyMMdd", TimeZone.getTimeZone("GMT+8"))
@@ -11,11 +11,18 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.2'
+        //classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.2'
+        classpath 'com.android.tools.build:gradle:3.0.1'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+
+        classpath 'org.greenrobot:greendao-gradle-plugin:3.2.2' // add plugin
+        classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
-andResGuard {
+/*andResGuard {
     mappingFile = file("./resource_mapping.txt")
 //    mappingFile = null
     use7zip = true
@@ -79,21 +86,22 @@ andResGuard {
             path = "/usr/bin/7za"
         }
     }
-}
+}*/
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.jb.filemanager"
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 26
         versionCode 2
         versionName "1.0.0"
         multiDexEnabled = true
         manifestPlaceholders = [COM_JB_FILEMANAGER_CHANNEL_VALUE: "200"]
+        flavorDimensions "versionCode"
     }
 
     signingConfigs {
@@ -131,7 +139,7 @@ android {
                     def outputFile = output.outputFile
                     if (outputFile != null && outputFile.name.endsWith('.apk')) {
                         def fileName = "${defaultConfig.applicationId}_v${defaultConfig.versionName}_${defaultConfig.versionCode}_${dateTime()}.apk"
-                        output.outputFile = new File(outputFile.parent, fileName)
+                        //output.outputFile = new File(outputFile.parent, fileName)
                     }
                 }
             }
@@ -188,9 +196,9 @@ dependencies {
     compile('com.mopub:mopub-sdk:4.11.0@aar') { transitive = true }
     compile files('libs/zip4j_1.3.2.jar')
     compile files('libs/java-unrar-0.5.jar')
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.android.gms:play-services-ads-lite:10.2.0'
