--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,10 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -15,9 +16,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven {
-            url "http://gomaven.3g.net.cn:8075/nexus/content/repositories/releases/"
-        }
+
+        google()
     }
 }
 
