--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,11 +8,12 @@ def static dateTime() {
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
         //classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.2'
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.2.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
